# stdl

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.md  Justfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: test.yml
.github/workflows/: CI.yml  black.yml  lint.yml  python-publish.yml  test.yml  tests.yml
docs/: index.md  requirements.txt
docs/reference/: color.md  decorators.md  dt.md  fs.md  import_lazy.md  log.md  net.md  st.md
stdl/: __init__.py  __init__.pyi  color.py  dataclass.py  datetime_u.py  datetime_util.py  datetime_utils.py  decorators.py  dt.py  fs.py  import_lazy.py  list_u.py  list_utils.py  log.py  logging.py  lst.py  net.py  net_u.py  net_util.py  net_utils.py  st.py  str_u.py  str_util.py  str_utils.py
tests/: test_color.py  test_datetime_u.py  test_decorators.py  test_dt.py  test_fs.py  test_fs_async.py  test_lst.py  test_pydantic_integration.py  test_st.py  test_str_u.py
